--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>eat locals!</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
-	<link rel='stylesheet' href='/global.css'>
-	<link rel='stylesheet' href='/build/bundle.css'>
-
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.11.0/mapbox-gl.css' rel='stylesheet' />
+	<link rel='stylesheet' href='/global.css' />
+	<link rel='stylesheet' href='/build/bundle.css' />
 	<script defer src='/build/bundle.js'></script>
 </head>
 
